--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "client:dev": "cd client && npm run dev",
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
+    "test": "npx cypress open",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
@@ -22,7 +23,7 @@
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
-    "cypress": "^13.13.1",
+    "cypress": "^13.17.0",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
